[package]
name = "marsh"
version = "0.1.0"
authors = ["Torrencem <matt@torrencefamily.net>"]
edition = "2018"

[build-dependencies]
lalrpop = { version="0.18.1", features=["lexer"] }

[dependencies]
lalrpop-util = "0.18.1"
clap = "2.33.0"
codespan = "0.9.2"
codespan-reporting = "0.9.2"
lazy_static = "1.4.0"

[dev-dependencies]
assert_cmd = "1.0.1"
predicates = "1"
