[package]
name = "technetium-lang"
version = "0.0.1"
authors = ["Matt Torrence <matt@torrencefamily.net>"]
description = """
technetium is an interpreted scripting language made mostly for install, build,
and configuration scripts.
"""
documentation = "https://matthewtorrence.com/technetium"
homepage = "https://matthewtorrence.com/technetium"
repository = "https://github.com/Torrencem/technetium"
readme = "README.md"
edition = "2018"

[[bin]]
path = "crates/core/main.rs"
name = "tech"

[workspace]
members = [
	"crates/lexer",
	"crates/runtime",
	"crates/compile",
	"crates/mlrefcell",
]

[dependencies]
lalrpop-util = "0.18.1"
codespan = "0.9.3"
codespan-reporting = "0.9.2"
lazy_static = "1.4.0"
log = { features = ["std"], version = "0.4" }
whoami = "1.1.2"
sys-info = "0.8.0"
pretty_dtoa = "0.1.0"
parking_lot = "0.10.2"
num = "0.2.1"
stable_deref_trait = "1.1.1"
mlrefcell = { path = "crates/mlrefcell" }
lexer = { path = "crates/lexer" }
compile = { path = "crates/compile" }
runtime = { path = "crates/runtime" }

[dependencies.clap]
version = "2.33.0"
default-features = false
features = ["suggestions"]

[dev-dependencies]
assert_cmd = "1.0.1"
predicates = "1"

[profile.release]
lto = true
