[package]
name = "compile"
version = "0.1.0"
authors = ["Torrencem <matt@torrencefamily.net>"]
edition = "2018"

[build-dependencies]
lalrpop = "0.18.1"

[dependencies]
lalrpop-util = "0.18.1"
codespan = "0.9.3"
codespan-reporting = "0.9.2"
lazy_static = "1.4.0"
log = { features = ["std"], version = "0.4" }
sys-info = "0.6.1"
dtoa = "0.4"
rental = "0.5.4"
parking_lot = "0.10.2"
num = "0.2.1"
stable_deref_trait = "1.1.1"
mlrefcell = { path = "../mlrefcell" }
lexer = { path = "../lexer" }
runtime = { path = "../runtime" }
