[package]
name = "runtime"
version = "0.1.0"
authors = ["Torrencem <matt@torrencefamily.net>"]
edition = "2018"

[dependencies]
codespan = "0.9.3"
codespan-reporting = "0.9.2"
lazy_static = "1.4.0"
sys-info = "0.6.1"
dtoa = "0.4"
rental = "0.5.4"
parking_lot = "0.10.2"
num = "0.2.1"
stable_deref_trait = "1.1.1"
mlrefcell = { path = "../mlrefcell" }
