[package]
name = "runtime"
version = "0.0.1"
authors = ["Torrencem <matt@torrencefamily.net>"]
edition = "2018"

[dependencies]
codespan = "0.9.3"
codespan-reporting = "0.9.2"
lazy_static = "1.4.0"
sys-info = "0.6.1"
whoami = "1.1.2"
rental = "0.5.4"
parking_lot = "0.10.2"
num = "0.2.1"
stable_deref_trait = "1.1.1"
once_cell = "1.4.0"
mlrefcell = { path = "../mlrefcell" }
which = "3.1.1"
pretty_dtoa = "0.3.0"
opener = "0.4.1"
bincode = "1.3.3"
glob = "0.3.0"
rand = "0.8.3"
rand_distr = "0.4.0"
log = { features = ["std"], version = "0.4" }
